<package>
  <name>rqt_histogram</name>
  <version>0.4.8</version>
  <description>rqt_histogram provides a GUI plugin visualizing numeric values in a histogram using different plotting backends.</description>
  <maintainer email="krystiancha@gmail.com">Krystian Chachula</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/protecto/rqt_histogram</url>
  <url type="bugtracker">https://github.com/protecto/rqt_histogram/issues</url>

  <author>Dorian Scholz</author>
  <author>Krystian Chachuła</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-matplotlib</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend version_gte="0.2.25">qt_gui_py_common</run_depend>
  <run_depend>qwt_dependency</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
